[package]
name = "lp-collection"
version = "1.0.0"
edition = "2021"
description = "Embedded/low-memory friendly chunked collections (ChunkedVec, ChunkedHashMap)"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/light-player/lp-common"

[lib]
name = "lp_collection"
path = "src/lib.rs"

[dependencies]
rustc-hash = { version = "2.0.0", default-features = false }
